--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==1.1.2
-gunicorn==20.1.0
 pandas==1.1.3
 google_auth_oauthlib==0.4.5
 selenium==3.141.0
 google_api_python_client==2.17.0
 protobuf==3.17.3
+Flask==1.1.2
+Flask-Cors==3.0.10
+gunicorn==20.1.0
